# FishStore

./: CMakeLists.txt
.github/workflows/: linux.yml
cmake/: ExternalAntlr4Cpp.cmake
examples/: CMakeLists.txt
examples/scheduling_demo/: CMakeLists.txt  README.md  data_generator.py  filter.h  legacy.h  misc.h  projection.h  record_helper.h  safe_typedef.h  scan_contexts.h  scan_scheduler.h  scheduling_demo.cc  table_scans.h  tsv_to_json.py  types.h
src/: CMakeLists.txt
src/adapters/: simdjson_adapter.h
src/core/: fishstore.h  internal_contexts.h  psf.h
src/jit/: ezpsf.g4  ezpsf.h  ezpsf_exceptions.h  ezpsf_visitor.h
src/jit/ast/: abstract_ast.h  ast.h  expr_ast.h  json_ast.h  lit_ast.h  llvm_consts.h  psf_ast.h
src/jit/datatypes/: conversion.h  conversion_declaration.h  str_info.h  types.h
test/: CMakeLists.txt  checkpoint_queue_test.cc  checkpoint_threadpool_test.cc  in_memory_test.cc  ingest_queue_test.cc  ingest_threadpool_test.cc  nulldisk_test.cc  register_test.cc  simdjson_adapter_test.cc
test/ezpsf/: CMakeLists.txt  basic_exprs_test.cpp  basic_ezpsf_fixture.h  test_adapter.h
